# paper-pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  DEV_SPEC.md  README.md  main.py  pyproject.toml
.cursor/skills/auto-coder/: SKILL.md
.cursor/skills/auto-coder/scripts/: sync_spec.py
.cursor/skills/skill-creator/: SKILL.md
.cursor/skills/skill-creator/scripts/: init_skill.py  package_skill.py
benchmarks/: __init__.py  latency_benchmark.py
config/: settings.yaml
docs/: PAPER_PILOT_DESIGN.md
scripts/: check_env.py  demo.py
src/: __init__.py  config.py  types.py
src/agent/: __init__.py  edges.py  graph.py  state.py
src/agent/nodes/: __init__.py  critic.py  format_output.py  memory_nodes.py  retry_refine.py  router.py  slot_filling.py
src/agent/strategies/: __init__.py  comparative.py  exploratory.py  multi_hop.py  simple.py
src/llm/: __init__.py  client.py
src/memory/: __init__.py  long_term.py  short_term.py
src/models/: __init__.py  inference.py  loader.py  vllm_client.py
src/prompts/: __init__.py  critic.py  memory.py  retry_refine.py  router.py  slot_filling.py  strategies.py
src/tools/: __init__.py  mcp_client.py  tool_wrapper.py
src/tracing/: __init__.py  rich_output.py  tracer.py
tests/e2e/: test_e2e.py
tests/fixtures/: mcp_stub_server.py  settings_test.yaml
tests/integration/: test_all_strategies.py  test_checkpointer_sessions.py  test_cli_smoke.py  test_config_graph.py  test_mcp_subprocess.py  test_memory_e2e.py  test_retry_path.py  test_simple_path.py  test_trace_integration.py
tests/unit/: test_comparative.py  test_config.py  test_critic.py  test_edges.py  test_exploratory.py  test_export_quantized.py  test_format_output.py  test_generate_critic_sft_data.py  test_generate_router_data.py  test_graph_skeleton.py  test_latency_benchmark.py  test_local_model.py  test_mcp_client.py  test_memory.py  test_multi_hop.py  test_quantize_base_model.py  test_retry_refine.py  test_rich_output.py  test_router.py  test_sft_critic.py  test_sft_router.py  test_simple.py  test_slot_filling.py  test_state.py  test_tool_wrapper.py  test_tracer.py  test_vllm_client.py
training/: TRAINING_GUIDE.md  __init__.py  config_loader.py  dpo_critic.py  eval_router_accuracy.py  export_quantized.py  quantize_base_model.py  sft_critic.py  sft_router.py  training_config.yaml
training/data/: __init__.py  critic_sft_train.jsonl  dpo_train.jsonl  generate_all_with_llm.py  generate_critic_sft_data.py  generate_critic_sft_with_llm.py  generate_dpo_pairs.py  generate_dpo_pairs_with_llm.py  generate_router_data.py  generate_router_data_with_llm.py  llm_client.py  normalize_dpo_prompt.py  router_train.jsonl
